Renderizando-cards-dinamicamente

--- a/index.html
+++ b/index.html
@@ -17,112 +17,13 @@
         <main>
             <section>
                 <h2>Paintings</h2>
-                    <ul>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                            <div class="data-card">
-                                <h3>Gokul</h3>
-                                <p>R$333,99</p>
-                            </div>
-                        </li>
-                    </ul>
+                    <ul id="paintings"></ul>
             </section>
             <section>
                 <h2>Action Figures</h2>
-                <ul>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./assets/img/actions/dragonball-action-figure.jpg" alt="">
-                        <div class="data-card">
-                            <h3>Gokul</h3>
-                            <p>R$333,99</p>
-                        </div>
-                    </li>
-                </ul>
+                <ul id="action-fig"></ul>
             </section>
         </main>
+        <script src="./script.js"></script>
     </body>
 </html>
